# shouri

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
modules/: CMakeLists.txt
modules/app/: CMakeLists.txt
modules/app/include/: main.hpp
modules/app/src/: main.cpp
modules/app/test/: main.cpp
modules/mos6507/: CMakeLists.txt
modules/mos6507/include/: cpu.hpp  isa.hpp  r8.hpp  regs.hpp
modules/mos6507/src/: cpu.cpp  isa.cpp
modules/mos6507/test/: cpu_tests.cpp  isa_tests.cpp
